--- a/migrate.yaml
+++ b/migrate.yaml
@@ -19,7 +19,7 @@ trac_url: https://trac.example.com/indigo
 
 # how should we convert the content?
 # (see code for supported types)
-convert: raw
+convert: pandoc
 
 # mapping of the trac statuses to the GH statuses
 status_map:
